ayman work finish

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ OCR_API_KEY=K82573522188957
 GROQ_API_KEY=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
 
 ASSEMBLYAI_API_KEY=8b9da6c57a274a138557dcf52e10777f
+
+GEMINI_API_KEY=AIzaSyAKL4ipRxwaX51Cd99mpERCBf2n_6yXfUs
